# IPC

./: .clang-format  README.md
.github/workflows/: tests.yml
src/: CMakeLists.txt
src/Socket/: CMakeLists.txt
src/Socket/include/: Socket.h
src/Socket/src/: Socket.cpp
src/Socket/tests/: Socket_tests.cpp
